Fix spacing

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ html, body {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
   position: relative;
 }
 
@@ -45,7 +44,7 @@ li {
 .selected {
   background-image: url('./arrow.svg');
   background-repeat: no-repeat;
-  background-position: 104% 50%;
+  background-position: 104% 45%;
 }
 
 .article {
@@ -55,7 +54,7 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
+  margin-left: 10px;
 }
 
 .article-container {
@@ -63,6 +62,10 @@ li {
 
 .article-header h2 {
   font-size: 20px;
+}
+
+h4 {
+  margin: 2px 0;
 }
 
 hr {
